# javaruntime

./: BUILD.bazel  Dockerfile  Makefile  README.md  build.gradle
src/main/java/io/grpc/examples/javaruntime/: JavaRuntimeClient.java  JavaRuntimeServer.java
src/main/proto/: javaruntime.proto
